Add swarms
